--- a/index.html
+++ b/index.html
@@ -30,19 +30,12 @@
         <meta name="title" content="GuardianUI - Frontend testing and monitoring for web3 apps">
         <meta name="description" content="Provide users with a safer and more robust experience. Testing, monitoring, and alerts in one platform.">
 
-        <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://www.guardianui.com/">
-        <meta property="og:title" content="GuardianUI - Frontend testing and monitoring for web3 apps">
-        <meta property="og:description" content="Provide users with a safer and more robust experience. Testing, monitoring, and alerts in one platform.">
-        <meta property="og:image" content="assets/images/Testing and Monitoring (1).png">
-
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://www.guardianui.com/">
         <meta property="twitter:title" content="GuardianUI - Frontend testing and monitoring for web3 apps">
         <meta property="twitter:description" content="Provide users with a safer and more robust experience. Testing, monitoring, and alerts in one platform.">
-        <meta property="twitter:image" content="assets/images/Testing and Monitoring (1).png">
+        <meta property="twitter:image" content="assets/images/guardianui_testing_and_monitoring_preview.png">
         <meta
             name="description"
             content="GuardianUI is the E2E monitoring platform for web3 apps and frontends."
