--- a/pr-preview/pr-10/pr-preview/pr-10/pr-preview/pr-10/index.html
+++ b/pr-preview/pr-10/pr-preview/pr-10/pr-preview/pr-10/index.html
@@ -289,7 +289,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link" Join Waitlist</a>
+                                    data-testid="join-waitlist-link">Join Waitlist</a>
                                 >
                             </div>
                             <div class="service-img">
