--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="btn"
-                                    data-testid="join-waitlist-button">Join Waitlist</a
+                                    data-testid="join-waitlist-button-menu">Join Waitlist</a
                                 >
                             </li>
                         </ul>
@@ -153,7 +153,7 @@
                                 target="_blank"
                                 rel="noreferrer noopener"
                                 class="btn"
-                                data-testid="join-waitlist-button">Join Waitlist</a
+                                data-testid="join-waitlist-button-hero">Join Waitlist</a
                             >
                         </div>
                         <div class="hero-img">
@@ -194,7 +194,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link">Join Waitlist</a
+                                    data-testid="join-waitlist-link-monitoring">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-img">
@@ -228,7 +228,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link">Join Waitlist</a
+                                    data-testid="join-waitlist-link-tests">Join Waitlist</a
                                 >
                             </div>
                         </div>
@@ -289,7 +289,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link">Join Waitlist</a
+                                    data-testid="join-waitlist-link-alerts">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-img">
@@ -324,7 +324,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    data-testid="join-waitlist-link">Join Waitlist</a
+                                    data-testid="join-waitlist-link-metrics">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-image-flex">
