Overview Section Fix

--- a/ai.html
+++ b/ai.html
@@ -44,7 +44,7 @@
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
-        <link rel="stylesheet" href="./assets/css/style2.css" />
+        <link rel="stylesheet" href="./assets/css/ai.css" />
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
