Updating the site nav
Online Browser Testing to link to guardianui.com, AI Test automation to link to guardianui.com/ai, and Docs to link to https://guardianui.gitbook.io/beta-documentation/

--- a/index.html
+++ b/index.html
@@ -60,49 +60,19 @@
             <div class="nav-container">
                 <div class="container">
                     <nav>
-                        <a href="#" class="logo">
-                            <img
-                                src="./assets/images/logo.png"
-                                alt="GuardianUI"
-                            />
+                        <a href="/" class="logo">
+                            <img src="./assets/images/logo.png" alt="GuardianUI" />
                         </a>
 
                         <ul class="nav-list">
                             <li>
-                                <a href="#monitoring" class="nav-link"
-                                    >Monitoring</a
-                                >
-                            </li>
-
-                            <li>
-                                <a href="#alerts" class="nav-link">Alerts</a>
+                                <a href="https://guardianui.com" class="nav-link">Online Browser Testing</a>
                             </li>
                             <li>
-                                <a href="#metrics" class="nav-link">Metrics</a>
+                                <a href="https://guardianui.com/ai" class="nav-link">AI Test Automation</a>
                             </li>
                             <li>
-                                <a href="#testimonial" class="nav-link"
-                                    >Testimonial</a
-                                >
-                            </li>
-                            <li>
-                                <a href="#features" class="nav-link"
-                                    >Features</a
-                                >
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link"
-                                    >Test Automation</a
-                                >
-                            </li>
-                            <li>
-                                <a
-                                    href="https://airtable.com/shr5P7WXayIw9zN1R"
-                                    target="_blank"
-                                    rel="noreferrer noopener"
-                                    class="btn"
-                                    >Join Waitlist</a
-                                >
+                                <a href="https://guardianui.gitbook.io/beta-documentation/" class="nav-link">Docs</a>
                             </li>
                         </ul>
 
@@ -116,6 +86,7 @@
                 </div>
             </div>
         </header>
+
         <!-- Navigation Bar End -->
 
         <main>
