Update Nav for AI LP

--- a/ai.html
+++ b/ai.html
@@ -60,29 +60,19 @@
             <div class="nav-container">
                 <div class="container">
                     <nav>
-                        <a href="#" class="logo">
-                            <img
-                                src="./assets/images/logo.png"
-                                alt="GuardianUI"
-                            />
+                        <a href="/" class="logo">
+                            <img src="./assets/images/logo.png" alt="GuardianUI" />
                         </a>
 
                         <ul class="nav-list">
                             <li>
-                                <a href="#supporters" class="nav-link"
-                                    >Supporters</a
-                                >
+                                <a href="https://guardianui.com" class="nav-link">Online Browser Testing</a>
                             </li>
                             <li>
-                                <a href="#feature" class="nav-link">Features</a>
+                                <a href="https://guardianui.com/ai" class="nav-link">AI Test Automation</a>
                             </li>
                             <li>
-                                <a href="#overview" class="nav-link"
-                                    >Overview</a
-                                >
-                            </li>
-                            <li>
-                                <a href="#apply" class="nav-link">Apply</a>
+                                <a href="https://guardianui.gitbook.io/beta-documentation/" class="nav-link">Docs</a>
                             </li>
                         </ul>
 
@@ -96,6 +86,7 @@
                 </div>
             </div>
         </header>
+
         <!-- Navigation Bar End -->
 
         <main>
