--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-NMHZDF7');</script>
+        <!-- End Google Tag Manager -->
+
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,6 +23,17 @@
         />
 
         <!-- Meta -->
+        <!-- Primary Meta Tags -->
+        <title>GuardianUI - Frontend testing and monitoring for web3 apps</title>
+        <meta name="title" content="GuardianUI - Frontend testing and monitoring for web3 apps">
+        <meta name="description" content="Provide users with a safer and more robust experience. Testing, monitoring, and alerts in one platform.">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://www.guardianui.com/">
+        <meta property="twitter:title" content="GuardianUI - Frontend testing and monitoring for web3 apps">
+        <meta property="twitter:description" content="Provide users with a safer and more robust experience. Testing, monitoring, and alerts in one platform.">
+        <meta property="twitter:image" content="assets/images/guardianui_testing_and_monitoring_preview.png">
         <meta
             name="description"
             content="GuardianUI is the E2E monitoring platform for web3 apps and frontends."
@@ -60,7 +80,7 @@
             <div class="nav-container">
                 <div class="container">
                     <nav>
-                        <a href="#" class="logo">
+                        <a href="#" class="logo" data-testid="guardianui-logo">
                             <img
                                 src="./assets/images/logo.png"
                                 alt="GuardianUI"
@@ -73,7 +93,9 @@
                                     >Monitoring</a
                                 >
                             </li>
-
+                            <li>
+                                <a href="#tests" class="nav-link">Tests</a>
+                            </li>
                             <li>
                                 <a href="#alerts" class="nav-link">Alerts</a>
                             </li>
@@ -91,17 +113,12 @@
                                 >
                             </li>
                             <li>
-                                <a href="#" class="nav-link"
-                                    >Test Automation</a
-                                >
-                            </li>
-                            <li>
                                 <a
                                     href="https://airtable.com/shr5P7WXayIw9zN1R"
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="btn"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-button-menu">Join Waitlist</a
                                 >
                             </li>
                         </ul>
@@ -136,7 +153,7 @@
                                 target="_blank"
                                 rel="noreferrer noopener"
                                 class="btn"
-                                >Join Waitlist</a
+                                data-testid="join-waitlist-button-hero">Join Waitlist</a
                             >
                         </div>
                         <div class="hero-img">
@@ -149,49 +166,6 @@
                 </div>
             </section>
             <!-- Hero Section End -->
-
-            <!-- Supporters Section -->
-            <section class="supporters-section">
-                <div class="container">
-                    <div class="supporters-content">
-                        <h2>Our Supporters</h2>
-
-                        <div class="supporters">
-                            <div>
-                                <img
-                                    src="./assets/images/supporters/nvidia.png"
-                                    alt="NVIDIA Inception Program"
-                                />
-                            </div>
-                            <div>
-                                <img
-                                    src="./assets/images/supporters/awsactivate.png"
-                                    alt="AWS Activate"
-                                />
-                            </div>
-                            <div>
-                                <img
-                                    src="./assets/images/supporters/ms_startup.png"
-                                    alt="Microsoft Startup Program"
-                                />
-                            </div>
-                            <div>
-                                <img
-                                    src="./assets/images/supporters/auth0.png"
-                                    alt="Auth0 for startups"
-                                />
-                            </div>
-                            <div>
-                                <img
-                                    src="./assets/images/supporters/intercom.png"
-                                    alt="Intercom"
-                                />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- Supporters Section End -->
 
             <!-- Service Section -->
             <section class="service-section">
@@ -220,7 +194,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-link-monitoring">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-img">
@@ -254,7 +228,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-link-tests">Join Waitlist</a
                                 >
                             </div>
                         </div>
@@ -280,33 +254,33 @@
                                 <ul class="alerts-icon">
                                     <li>
                                         <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            viewBox="0 0 640 512"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                viewBox="0 0 640 512"
+                                            >
+                                                <path
+                                                    d="M524.531,69.836a1.5,1.5,0,0,0-.764-.7A485.065,485.065,0,0,0,404.081,32.03a1.816,1.816,0,0,0-1.923.91,337.461,337.461,0,0,0-14.9,30.6,447.848,447.848,0,0,0-134.426,0,309.541,309.541,0,0,0-15.135-30.6,1.89,1.89,0,0,0-1.924-.91A483.689,483.689,0,0,0,116.085,69.137a1.712,1.712,0,0,0-.788.676C39.068,183.651,18.186,294.69,28.43,404.354a2.016,2.016,0,0,0,.765,1.375A487.666,487.666,0,0,0,176.02,479.918a1.9,1.9,0,0,0,2.063-.676A348.2,348.2,0,0,0,208.12,430.4a1.86,1.86,0,0,0-1.019-2.588,321.173,321.173,0,0,1-45.868-21.853,1.885,1.885,0,0,1-.185-3.126c3.082-2.309,6.166-4.711,9.109-7.137a1.819,1.819,0,0,1,1.9-.256c96.229,43.917,200.41,43.917,295.5,0a1.812,1.812,0,0,1,1.924.233c2.944,2.426,6.027,4.851,9.132,7.16a1.884,1.884,0,0,1-.162,3.126,301.407,301.407,0,0,1-45.89,21.83,1.875,1.875,0,0,0-1,2.611,391.055,391.055,0,0,0,30.014,48.815,1.864,1.864,0,0,0,2.063.7A486.048,486.048,0,0,0,610.7,405.729a1.882,1.882,0,0,0,.765-1.352C623.729,277.594,590.933,167.465,524.531,69.836ZM222.491,337.58c-28.972,0-52.844-26.587-52.844-59.239S193.056,219.1,222.491,219.1c29.665,0,53.306,26.82,52.843,59.239C275.334,310.993,251.924,337.58,222.491,337.58Zm195.38,0c-28.971,0-52.843-26.587-52.843-59.239S388.437,219.1,417.871,219.1c29.667,0,53.307,26.82,52.844,59.239C470.715,310.993,447.538,337.58,417.871,337.58Z"
+                                                /></svg
                                         >
-                                            <path
-                                                d="M524.531,69.836a1.5,1.5,0,0,0-.764-.7A485.065,485.065,0,0,0,404.081,32.03a1.816,1.816,0,0,0-1.923.91,337.461,337.461,0,0,0-14.9,30.6,447.848,447.848,0,0,0-134.426,0,309.541,309.541,0,0,0-15.135-30.6,1.89,1.89,0,0,0-1.924-.91A483.689,483.689,0,0,0,116.085,69.137a1.712,1.712,0,0,0-.788.676C39.068,183.651,18.186,294.69,28.43,404.354a2.016,2.016,0,0,0,.765,1.375A487.666,487.666,0,0,0,176.02,479.918a1.9,1.9,0,0,0,2.063-.676A348.2,348.2,0,0,0,208.12,430.4a1.86,1.86,0,0,0-1.019-2.588,321.173,321.173,0,0,1-45.868-21.853,1.885,1.885,0,0,1-.185-3.126c3.082-2.309,6.166-4.711,9.109-7.137a1.819,1.819,0,0,1,1.9-.256c96.229,43.917,200.41,43.917,295.5,0a1.812,1.812,0,0,1,1.924.233c2.944,2.426,6.027,4.851,9.132,7.16a1.884,1.884,0,0,1-.162,3.126,301.407,301.407,0,0,1-45.89,21.83,1.875,1.875,0,0,0-1,2.611,391.055,391.055,0,0,0,30.014,48.815,1.864,1.864,0,0,0,2.063.7A486.048,486.048,0,0,0,610.7,405.729a1.882,1.882,0,0,0,.765-1.352C623.729,277.594,590.933,167.465,524.531,69.836ZM222.491,337.58c-28.972,0-52.844-26.587-52.844-59.239S193.056,219.1,222.491,219.1c29.665,0,53.306,26.82,52.843,59.239C275.334,310.993,251.924,337.58,222.491,337.58Zm195.38,0c-28.971,0-52.843-26.587-52.843-59.239S388.437,219.1,417.871,219.1c29.667,0,53.307,26.82,52.844,59.239C470.715,310.993,447.538,337.58,417.871,337.58Z"
-                                            />
-                                        </svg>
                                     </li>
                                     <li>
                                         <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            viewBox="0 0 496 512"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                viewBox="0 0 496 512"
+                                            >
+                                                <path
+                                                    d="M248,8C111.033,8,0,119.033,0,256S111.033,504,248,504,496,392.967,496,256,384.967,8,248,8ZM362.952,176.66c-3.732,39.215-19.881,134.378-28.1,178.3-3.476,18.584-10.322,24.816-16.948,25.425-14.4,1.326-25.338-9.517-39.287-18.661-21.827-14.308-34.158-23.215-55.346-37.177-24.485-16.135-8.612-25,5.342-39.5,3.652-3.793,67.107-61.51,68.335-66.746.153-.655.3-3.1-1.154-4.384s-3.59-.849-5.135-.5q-3.283.746-104.608,69.142-14.845,10.194-26.894,9.934c-8.855-.191-25.888-5.006-38.551-9.123-15.531-5.048-27.875-7.717-26.8-16.291q.84-6.7,18.45-13.7,108.446-47.248,144.628-62.3c68.872-28.647,83.183-33.623,92.511-33.789,2.052-.034,6.639.474,9.61,2.885a10.452,10.452,0,0,1,3.53,6.716A43.765,43.765,0,0,1,362.952,176.66Z"
+                                                /></svg
                                         >
-                                            <path
-                                                d="M248,8C111.033,8,0,119.033,0,256S111.033,504,248,504,496,392.967,496,256,384.967,8,248,8ZM362.952,176.66c-3.732,39.215-19.881,134.378-28.1,178.3-3.476,18.584-10.322,24.816-16.948,25.425-14.4,1.326-25.338-9.517-39.287-18.661-21.827-14.308-34.158-23.215-55.346-37.177-24.485-16.135-8.612-25,5.342-39.5,3.652-3.793,67.107-61.51,68.335-66.746.153-.655.3-3.1-1.154-4.384s-3.59-.849-5.135-.5q-3.283.746-104.608,69.142-14.845,10.194-26.894,9.934c-8.855-.191-25.888-5.006-38.551-9.123-15.531-5.048-27.875-7.717-26.8-16.291q.84-6.7,18.45-13.7,108.446-47.248,144.628-62.3c68.872-28.647,83.183-33.623,92.511-33.789,2.052-.034,6.639.474,9.61,2.885a10.452,10.452,0,0,1,3.53,6.716A43.765,43.765,0,0,1,362.952,176.66Z"
-                                            />
-                                        </svg>
                                     </li>
                                     <li>
                                         <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            viewBox="0 0 512 512"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                viewBox="0 0 512 512"
+                                            >
+                                                <path
+                                                    d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
+                                                /></svg
                                         >
-                                            <path
-                                                d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"
-                                            />
-                                        </svg>
                                     </li>
                                 </ul>
                                 <br />
@@ -315,7 +289,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-link-alerts">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-img">
@@ -350,7 +324,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-link-metrics">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-image-flex">
@@ -714,5 +688,9 @@
 
         <!-- Scripts -->
         <script src="./assets/js/script.js"></script>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NMHZDF7"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
     </body>
 </html>
