Added GTM, meta tags, and data test ID

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-NMHZDF7');</script>
+        <!-- End Google Tag Manager -->
+        
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,6 +22,17 @@
         />
 
         <!-- Meta -->
+          <!-- Primary Meta Tags -->
+        <title>GuardianUI - Frontend testing and monitoring for web3 apps</title>
+        <meta name="title" content="GuardianUI - Frontend testing and monitoring for web3 apps">
+        <meta name="description" content="Provide users with a safer and more robust experience. Testing, monitoring, and alerts in one platform.">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://www.guardianui.com/">
+        <meta property="twitter:title" content="GuardianUI - Frontend testing and monitoring for web3 apps">
+        <meta property="twitter:description" content="Provide users with a safer and more robust experience. Testing, monitoring, and alerts in one platform.">
+        <meta property="twitter:image" content="assets/images/guardianui_testing_and_monitoring_preview.png">
         <meta
             name="description"
             content="GuardianUI is the E2E monitoring platform for web3 apps and frontends."
@@ -107,7 +126,7 @@
                                 target="_blank"
                                 rel="noreferrer noopener"
                                 class="btn"
-                                >Join Waitlist</a
+                                data-testid="join-waitlist-button-hero">Join Waitlist</a
                             >
                         </div>
                         <div class="hero-img">
@@ -191,7 +210,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-link-monitoring">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-img">
@@ -225,7 +244,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-link-tests">Join Waitlist</a
                                 >
                             </div>
                         </div>
@@ -286,7 +305,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-link-alerts">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-img">
@@ -321,7 +340,7 @@
                                     target="_blank"
                                     rel="noreferrer noopener"
                                     class="link"
-                                    >Join Waitlist</a
+                                    data-testid="join-waitlist-link-metrics">Join Waitlist</a
                                 >
                             </div>
                             <div class="service-image-flex">
