Picture caption was incorrect
Updated the caption for the picture t say "Prompt: "Select the Connect Wallet button""

--- a/ai.html
+++ b/ai.html
@@ -383,7 +383,7 @@
                                     </div>
                                     <center>
                                         <h6>
-                                            Select the Connect Wallet button
+                                            Prompt: "Select the Connect Wallet button"
                                         </h6>
                                     </center>
                                 </div>
