Fixing my mistakes
The menu bar should have this Join Waitlist button.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
                             <li>
                                 <a href="https://guardianui.gitbook.io/beta-documentation/" class="nav-link">Docs</a>
                             </li>
+                            <li>
+                                <a
+                                    href="https://airtable.com/shr5P7WXayIw9zN1R"
+                                    target="_blank"
+                                    rel="noreferrer noopener"
+                                    class="btn"
+                                    data-testid="join-waitlist-button">Join Waitlist</a
+                                >
+                            </li>
                         </ul>
 
                         <div class="hamburger">
