--- a/index.html
+++ b/index.html
@@ -233,6 +233,16 @@
                 </div>
             </section>
             <!-- Service Section End -->
+            
+            <!-- Video Section -->
+            <section class="video-section">
+                <div class="container">
+                    <div style="position: relative; padding-bottom: 56.25%; height: 0;">
+                        <iframe src="https://www.loom.com/embed/5180adf6be1e4ef58cae084e6c035187" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                    </div>
+                </div>
+            </section>
+            <!-- Video Section End -->
 
             <!-- Service Section -->
             <section class="service-section alt">
