--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <!-- Video Section -->
             <section class="video-section">
               <div class="container">
-                <div class="video-content">
+                <div class="service-img">
                   <h3>Testing Framework</h3>
                   <h2>Modified Playwright Framework</h2>
                   <p>We've created a custom modification to Playwright so you get all the benefit of being able to test web3 critical flows while using a familiar framework.</p>
