--- a/index.html
+++ b/index.html
@@ -238,12 +238,18 @@
             <!-- Video Section -->
             <section class="video-section">
               <div class="container">
-                <div class="service-img">
-                  <h3>Testing Framework</h3>
-                  <h2>Modified Playwright Framework</h2>
-                  <p>We've created a custom modification to Playwright so you get all the benefit of being able to test web3 critical flows while using a familiar framework.</p>
-                  <div style="position: relative; padding-bottom: 56.25%; height: 0;">
-                    <iframe src="https://www.loom.com/embed/5180adf6be1e4ef58cae084e6c035187" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                <div class="video-content">
+                    <div class="service-flex">
+                        <div class="service-text">
+                            <h3>Testing Framework</h3>
+                            <h2>Modified Playwright Framework</h2>
+                            <p>
+                                We've created a custom modification to Playwright 
+                                so you get all the benefit of being able to test 
+                                web3 critical flows while using a familiar framework.
+                            </p>
+                        <div style="position: relative; padding-bottom: 56.25%; height: 0;">
+                            <iframe src="https://www.loom.com/embed/5180adf6be1e4ef58cae084e6c035187" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
                   </div>
                 </div>
               </div>
