--- a/index.html
+++ b/index.html
@@ -248,9 +248,11 @@
                                 so you get all the benefit of being able to test 
                                 web3 critical flows while using a familiar framework.
                             </p>
-                        <div style="position: relative; padding-bottom: 56.25%; height: 0;">
+                        </div>
+                        <div class="service-img">
                             <iframe src="https://www.loom.com/embed/5180adf6be1e4ef58cae084e6c035187" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
-                  </div>
+                        </div>
+                    </div>
                 </div>
               </div>
             </section>
