--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
                             </p>
                         </div>
                         <div style="position: relative; padding-bottom: 56.25%; height: 0;">
-                            <iframe src="https://www.loom.com/embed/5180adf6be1e4ef58cae084e6c035187" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+                            <iframe 
+                                src="https://www.loom.com/embed/5180adf6be1e4ef58cae084e6c035187" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                            />
                         </div>
                     </div>
                 </div>
