Moved Video to YT

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             </div>
                             <div class="service-video">
                                 <div class="video-wrapper">
-                                    <iframe width="560" height="315" src="https://www.loom.com/embed/5180adf6be1e4ef58cae084e6c035187" title="GuardianUI video"
+                                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=WsEGNx48mgc" title="GuardianUI video"
                                         frameborder="0"
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                         allowfullscreen></iframe>
