--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
                             </div>
                             <div class="service-video">
                                 <div class="video-wrapper">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=WsEGNx48mgc" title="GuardianUI video"
-                                        frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                                        allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI video" 
+                                        frameborder="0" 
+                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                                        allowfullscreen></iframe
                                 </div>
                             </div>
                         </div>
