Update copy for new Testing Framework section

--- a/index.html
+++ b/index.html
@@ -242,11 +242,18 @@
                         <div class="service-flex service-video-flex">
                             <div class="service-text">
                                 <h3>Testing Framework</h3>
-                                <h2>Modified Playwright Framework</h2>
-                                <p>We've created a custom modification to Playwright
-                                   so you get all the benefit of being able to test
-                                   web3 critical flows while using a familiar framework.
+                                <h2>Extended Playwright Framework</h2>
+                                <p>
+                                   We've extended the popular Playwright framework
+                                   to include web3 interactions so you get all the 
+                                   benefit of testing your critical paths while using 
+                                   a familiar framework.
                                 </p>
+                                <p>
+                                    Using our extended version of Playwright, you can 
+                                    verify all of your write interactions such as transactions 
+                                    pointing to the correct contracts and approvals giving 
+                                    appropriate access to user funds.
                             </div>
                             <div class="service-video">
                                 <div class="video-wrapper">
@@ -274,7 +281,7 @@
                                 <p>
                                     We know developers don’t like writing tests.
                                     Our team can write your tests so your team
-                                    can focus on feature implementation.
+                                    can focus on shipping new features.
                                 </p>
                                 <a
                                     href="https://airtable.com/shr5P7WXayIw9zN1R"
