--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI video" 
                                         frameborder="0" 
                                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                                        allowfullscreen></iframe
+                                            allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
