--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               <div class="container">
                 <div class="video-content">
                   <div class="video-flex">
-                    <div class="video-text">
+                    <div class="service-text">
                       <h3>Testing Framework</h3>
                       <h2>Extended Playwright Framework</h2>
                       <p>
@@ -257,7 +257,7 @@
                       </p>
                     </div>
                     <div class="video-embed">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/WsEGNx48mgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI Framework Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                   </div>
                 </div>
