--- a/index.html
+++ b/index.html
@@ -236,33 +236,31 @@
 
             <!-- Video Section -->
             <section class="video-section">
-              <div class="anchor" id="video"></div>
-              <div class="container">
-                <div class="video-content">
-                  <div class="video-flex">
-                    <div class="service-text">
-                      <h3>Testing Framework</h3>
-                      <h2>Extended Playwright Framework</h2>
-                      <p>
-                        We've extended the popular Playwright framework
-                        to include web3 interactions so you get all the
-                        benefit of testing your critical paths while using
-                        a familiar framework.
-                      </p>
-                      <p>
-                        Using our extended version of Playwright, you can
-                        verify all of your write interactions such as transactions
-                        pointing to the correct contracts and approvals giving
-                        appropriate access to user funds.
-                      </p>
+                <div class="container">
+                    <div class="video-flex">
+                        <div class="service-text">
+                            <h3>Testing Framework</h3>
+                            <h2>Extended Playwright Framework</h2>
+                            <p>
+                                We've extended the popular Playwright framework
+                                to include web3 interactions so you get all the 
+                                benefit of testing your critical paths while using 
+                                a familiar framework.
+                            </p>
+                            <p>
+                                Using our extended version of Playwright, you can 
+                                verify all of your write interactions such as transactions 
+                                pointing to the correct contracts and approvals giving 
+                                appropriate access to user funds.
+                            </p>
+                        </div>
+                        <div class="video-player">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI Framework Uniswap Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
                     </div>
-                    <div class="video-embed">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI Framework Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-                  </div>
                 </div>
-              </div>
             </section>
+
 
             <!-- Video Section End -->
 
