--- a/index.html
+++ b/index.html
@@ -235,30 +235,32 @@
             <!-- Service Section End -->
 
             <!-- Video Section -->
-            <section class="video-section">
+            <section class="service-section">
                 <div class="container">
-                    <div class="video-flex">
-                        <div class="service-text">
-                            <h3>Testing Framework</h3>
-                            <h2>Extended Playwright Framework</h2>
-                            <p>
-                                We've extended the popular Playwright framework
-                                to include web3 interactions so you get all the 
-                                benefit of testing your critical paths while using 
-                                a familiar framework.
-                            </p>
-                            <p>
-                                Using our extended version of Playwright, you can 
-                                verify all of your write interactions such as transactions 
-                                pointing to the correct contracts and approvals giving 
-                                appropriate access to user funds.
-                            </p>
-                        </div>
-                        <div class="video-player">
-                            <iframe src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI Framework Uniswap Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="service-content">
+                        <div class="service-flex">
+                            <div class="service-text">
+                                <h3>Testing Framework</h3>
+                                <h2>Extended Playwright Framework</h2>
+                                <p>
+                                    We've extended the popular Playwright framework
+                                    to include web3 interactions so you get all the 
+                                    benefit of testing your critical paths while using 
+                                    a familiar framework.
+                                </p>
+                                <p>
+                                    Using our extended version of Playwright, you can 
+                                    verify all of your write interactions such as transactions 
+                                    pointing to the correct contracts and approvals giving 
+                                    appropriate access to user funds.
+                                </p>
+                            </div>
+                            <div class="video-player">
+                                <iframe src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI Framework Uniswap Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </div>        
             </section>
 
 
