--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                 </p>
                             </div>
                             <div class="video-player">
-                                <iframe src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI Framework Uniswap Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/WsEGNx48mgc" title="GuardianUI Framework Uniswap Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
