--- a/index.html
+++ b/index.html
@@ -626,9 +626,36 @@
             <!-- Feature Section End -->
             
             <!-- FAQ Section -->
+            <section class="service-section alt">
+                <div class="anchor" id="tests"></div>
+                <div class="container">
+                    <div class="service-content">
+                        <div class="service">
+                            <div class="service-text">
+                                <h3>Custom Test Writing</h3>
+                                <h2>We can write your tests</h2>
+                                <p>
+                                    We know developers don’t like writing tests.
+                                    Our team can write your tests so your team
+                                    can focus on shipping new features.
+                                </p>
+                                <a
+                                    href="https://airtable.com/shr5P7WXayIw9zN1R"
+                                    target="_blank"
+                                    rel="noreferrer noopener"
+                                    class="link"
+                                    data-testid="join-waitlist-link-tests">Join Waitlist</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
             <section class="faq-section">
-                <h2>Frequently Asked Questions</h2>
-                <div class="faq-container">
+                <div class="container">
+                    <div class="service content">
+                        <h2>Frequently Asked Questions</h2>
                         <div class="faq-item">
                             <div class="faq-question">What is your return policy?</div>
                             <div class="faq-answer">
