--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             
             <!-- FAQ Section -->        
             <section class="faq-section">
-                <div class="faq-container">
+                <div class="container">
                     <div class="faq-content">
                         <h2 class="faq-heading">Frequently asked questions</h2>
                             
