--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 
                             <!-- faq answer -->
                             <div class="faq-body">
-                                <p>GuardianUI is an end-to-end testing and monitoring platform for web3 apps.<br> We automate 
+                                <p>GuardianUI is an end-to-end testing and monitoring platform for web3 apps.<br><br> We automate 
                                     end-to-end testing of web3 critical paths, monitor your app, and provide real-time alerting 
                                     and observability to ensure deployed apps create the expected smart contract interactions 
                                     for users.</p>
