--- a/index.html
+++ b/index.html
@@ -649,12 +649,12 @@
                         <div class="faq-two">
 
                             <!-- faq question -->
-                            <h3 class="faq-page">What is GuardianUI testing and monitoring for exactly?</h3>
+                            <h3 class="faq-page">What does GuardianUI test and monitor for exactly?</h3>
 
                             <!-- faq answer -->
 
                             <div class="faq-body">
-                                <p>We check that your app’s frontend is creating the expected smart contract write transactions. 
+                                <p>We check that your app’s frontend is creating the expected smart contract write transactions.<br><br> 
                                     Specifically, we make sure transactions point to the right contracts and approvals give the 
                                     appropriate access to user funds.</p>
                             </div>
@@ -669,9 +669,9 @@
                             <!-- faq answer -->
                             <div class="faq-body">
                                 <p>Users deserve safe and secure experiences, and there are tons of ways users can get rugged 
-                                    while using your app without you knowing it. Whether it’s bad code accidentally getting 
+                                    while using your app without you knowing it. <br><br>Whether it’s bad code accidentally getting 
                                     pushed to production, supply chain attacks, or middleware attacks - your app’s frontend 
-                                    has significant risk vectors that’s impossible for you and your team to manually monitor. 
+                                    has significant risk vectors that’s impossible for you and your team to manually monitor.<br><br> 
                                     That’s where we come in. With GuardianUI, you can set it and forget it - by continuously 
                                     monitoring that your frontend is working as expected. If it doesn’t, we’ll immediately notify 
                                     you of exactly what’s wrong so you can address the issue immediately and keep your users 
@@ -683,15 +683,15 @@
                         <div class="faq-four">
 
                             <!-- faq question -->
-                            <h3 class="faq-page">What are examples of things GuardianUI protects against?</h3>
+                            <h3 class="faq-page">What does GuardianUI protect against?</h3>
 
                             <!-- faq answer -->
                             <div class="faq-body">
                                 <p>GuardianUI monitors for anything that might cause your frontend to create the wrong smart 
-                                    contract interactions and rug your users. This includes middleware and supply chain attacks 
+                                    contract interactions and rug your users.<br><br> This includes middleware and supply chain attacks 
                                     that could compromise your frontend and alter its contract interactions, such as DNS attacks, 
                                     Cloudflare attacks, javascript injections, malicious package injections, package name squatting, 
-                                    malicious minifiers, compromised linters, and more. It also includes incorrect code getting 
+                                    malicious minifiers, compromised linters, and more.<br><br> It also includes incorrect code getting 
                                     pushed to production.</p>
                             </div>
                         </div>
@@ -740,7 +740,7 @@
                             <!-- faq answer -->
                             <div class="faq-body">
                                 <p>Currently, GuardianUI only monitors apps on Ethereum mainnet, but we plan to expand our coverage 
-                                    to all EVM compatible chains. If your project is not on mainnet, we want to hear from you! 
+                                    to all EVM compatible chains.<br><br> If your project is not on mainnet, we want to hear from you! 
                                     Please <a href="mailto:marshall@guardianui.com" class="link--no-arrow">email us</a> and let us know more, so we know which chains to prioritize 
                                     next!</p>
                             </div>
@@ -754,8 +754,8 @@
 
                             <!-- faq answer -->
                             <div class="faq-body">
-                                <p>GuardianUI monitors your live app to make sure it’s safe for users. We continuously check to make sure your app’s 
-                                    live UI is creating the expected smart contract interactions for your users. If a check fails for some reason 
+                                <p>GuardianUI monitors your live app to make sure it’s safe for users.<br><br> We continuously check to make sure your app’s 
+                                    live UI is creating the expected smart contract interactions for your users.<br><br> If a check fails for some reason 
                                     (e.g. an attack or simply bad code), we alert you immediately with information to address the root issue so you 
                                     can keep your users safe. </p>
                             </div>
@@ -770,7 +770,7 @@
                             <!-- faq answer -->
                             <div class="faq-body">
                                 <p>If a check fails, GuardianUI will immediately send your team an alert via email and/or discord with the exact failure 
-                                    reason. We eliminate the guesswork so you can immediately address the root issue. For more about alerts, 
+                                    reason.<br><br> We eliminate the guesswork so you can immediately address the root issue.<br><br> For more about alerts, 
                                     please see <a href="https://guardianui.gitbook.io/beta-documentation/alerts/alerts-overview" class="link--no-arrow">our docs</a>.</p>
                             </div>
                         </div>
@@ -797,8 +797,19 @@
                             <!-- faq answer -->
                             <div class="faq-body">
                                 <p>Every app is unique with different security needs. As a general rule, you should consider creating tests for 
-                                    any interaction your frontend has with smart contracts. We are happy to write your tests for you if you’d 
+                                    any interaction your frontend has with smart contracts.<br><br> We are happy to write your tests for you if you’d 
                                     prefer we do it instead of your team.</p>
+                            </div>
+                        <hr class="hr-line">
+
+                        <div class="faq-twelve">
+
+                            <!-- faq question -->
+                            <h3 class="faq-page">We don't have time to write tests. How can you help?</h3>
+
+                            <!-- faq answer -->
+                            <div class="faq-body">
+                                <p>We'll write your tests for you! Just fill out <a href="https://airtable.com/shrIzrQxUZqBOKabG" class="link--no-arrow">this form</a>.</p>
                             </div>            
                         </div>
                     </div>
