--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                         <div class="faq-five">
 
                             <!-- faq question -->
-                            <h3 class="faq-page">What are examples of web3 hacks GuardianUI would protect against? </h3>
+                            <h3 class="faq-page">What are examples of hacks GuardianUI would protect against? </h3>
 
                             <!-- faq answer -->
                             <div class="faq-body">
